--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ requires-python = ">=3.11"
 dependencies = [
     "matplotlib>=3.10.0",
     "numpy>=2.2.3",
+    "scikit-learn>=1.6.1",
     "streamlit>=1.42.2",
 ]
