--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.11"
 dependencies = [
     "matplotlib>=3.10.0",
     "numpy>=2.2.3",
+    "openai>=1.64.0",
     "scikit-learn>=1.6.1",
     "streamlit>=1.42.2",
 ]
