Optimize ACO solver for scalability to 1000 nodes: Improve parameter adaptation, vectorize distance calculations, and enhance clustering for improved performance and automatic vehicle determination.
Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/7a0dd741-90ae-4324-8f19-7fe1688a84f5/15773d79-2bf1-4add-8e4b-972c8e18287a.jpg

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
+    "anthropic>=0.47.2",
     "matplotlib>=3.10.0",
     "numpy>=2.2.3",
     "openai>=1.64.0",
