--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "matplotlib>=3.10.0",
     "numpy>=2.2.3",
     "openai>=1.64.0",
+    "pandas>=2.2.3",
+    "requests>=2.32.3",
     "scikit-learn>=1.6.1",
     "streamlit>=1.42.2",
     "trafilatura>=2.0.0",
