--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.11"
 dependencies = [
     "anthropic>=0.47.2",
     "matplotlib>=3.10.0",
+    "networkx>=3.4.2",
     "numpy>=2.2.3",
     "openai>=1.64.0",
     "pandas>=2.2.3",
